--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -40,7 +40,7 @@ Ce rapport porte sur la matière électronique des hautes-fréquences. Il s'agit
 Ce rapport de travaux pratiques s'inscrit dans une application concrète du monde de l'ingénierie, c'est-à-dire la conception d'une solution répondant à une problématique, et cela selon un cahier des charges.\\
 
 \subsection{Objectifs du mini-projet}
-Ce rapport vise à combiner la théorie et la pratique de la matière électronique des hautes-fréquences. Chaque partie analysera d'abord en détail les principes appliqués et les méthodes utilisées. Des logiciels de modélisation et de simulation comme ADS, AppCAD ou encore GNU Octave seront utilisés pour mettre les principes en application.\\
+Ce rapport vise à combiner la théorie et la pratique de la matière électronique des hautes-fréquences. Chaque partie analysera d'abord en détail les principes appliqués et les méthodes utilisées. Des logiciels de modélisation et de simulation comme ADS, AppCAD ou encore GNU Octave seront utilisés pour mettre ces principes en application.\\
 
 \noindent Les autres objectifs sont donnés ci-dessous :\\
 
@@ -1902,7 +1902,7 @@ Lorsque la fréquence de simulation est de 2 GHz, les résultats montrent que $S
 \subsection{Adaptation d’un transistor avec polarisation}
 Dans les sections précédentes, nous avons utilisé un modèle de transistor AT-41485 polarisé, qui satisfait déjà ces deux conditions :$V_{CE}=8 V$ et $I_{C}=10 mA$. Maintenant, on s’intéresse à la polarisation du transistor. La valeur de résistance de la résistance doit être calculée pour que le circuit réponde aux conditions de conception du transistor. Le circuit de polarisation à concevoir doit avoir une faible impédance pour les basses fréquences et une haute impédance pour les hautes fréquences. De plus, des condensateurs doivent être ajoutés entre le transistor et la source et la charge, respectivement, pour empêcher le courant continu d'entrer dans le reste du circuit.
 
-La maquette donnée comporte le transistor à caractériser, sa polarisation et des lignes d'accès à la base et au collecteur d'une longueur électrique supérieure à $\lambda\2$ à 2 GHz. De plus, on dispose d'une ligne 50Ohm de traversée(THRU) et d’une ligne terminée par un court-circuit dans le plan d'entrée du transistor(REFLECT) qui permettent d'étalonner le relevé des paramètre S. La polarisation est découplée du signal par une ligne $\lambda\4$ a haute impédance et une capacité de retour à la masse sur les accès base et collecteur. 
+La maquette donnée comporte le transistor à caractériser, sa polarisation et des lignes d'accès à la base et au collecteur d'une longueur électrique supérieure à $\lambda/2$ à 2 GHz. De plus, on dispose d'une ligne 50Ohm de traversée(THRU) et d’une ligne terminée par un court-circuit dans le plan d'entrée du transistor(REFLECT) qui permettent d'étalonner le relevé des paramètre S. La polarisation est découplée du signal par une ligne $\lambda/4$ a haute impédance et une capacité de retour à la masse sur les accès base et collecteur. 
 \newpage
 
 Le circuit est présenté ci-dessous:
@@ -1926,25 +1926,20 @@ Lorsque la fréquence de simulation est de 2 GHz, les résultats montrent que $S
 
 \newpage
 \section{Conclusion}
-
 Au cours de ce rapport il a été vu dans un premier temps une méthodologie de caractérisation d'une ligne micro-ruban sur divers diélectriques. La méthode consistait à la superposition entre les valeurs réelles expérimentales et celles obtenues à partir d'une modélisation. La réalisation d'une bonne caractérisation réside dans la complexité du modèle théorique, qui se doit être la plus réaliste possible. C'est ce qui a été mis en place à l'aide de la prise en compte de phénomènes physiques comme les discontinuités. Il est indispensable de réaliser cette étape de caractérisation avant toutes réalisations de fonctions électroniques car il faut avoir connaissance des paramètres du diélectrique pour que les simulations effectuées soient proches de ce qu'on obtiendrait lors de la réalisation en laboratoire.\\
-
 Le filtre passe-bas elliptique a été conçu en essayant de respecter au mieux les exigences du cahier des charges. Une telle conception a également permis d'étudier un tout nouveau type de filtre qu'est le filtre elliptique, autrement appelé filtre de Cauer. La conception en éléments localisés a été réalisée avec les mêmes méthodes employées lors de la conception en moyennes fréquences. La seconde partie consistait à la transposition en technologie micro-ruban. Un tel passage s'appui sur un modèle physique basé sur des hypothèses. La réalisation impose de fixer des paramètres géométriques choisis en fonction des contraintes concepteurs (contraintes technologiques photolithographies). Les simulations ont montré que les hypothèses ne sont pas toujours respectées. Il s'agit là d'une leçon utile pour notre future carrière d'ingénieur. En effet, les projets imposent parfois de faire des hypothèses, l'enjeu est de savoir si elles sont bien applicables dans le contexte donné.\\
+La conception d'un filtre passe bande a été présentée suivant différentes étapes. La première s'attache à vérifier et, si nécessaire, recentrer le gabarit. La suivante opère une transformation du gabarit en passe bas. Cela rend plus aisé le calcul de l'ordre et des valeurs normalisées. Viens ensuite l'étape de dénormalisation visant à remplacer chaque composant réactif en résonateur LC série ou parallèle. Le résultat de cette synthèse peut être simulé pour valider le bon fonctionnement. Dans notre cas, une dissymétrie lors du recentrage couplée à un ordre de filtre limite ont entraînés une légère sortie du gabarit. L'étape finale de transposition en technologie micro-ruban est spécifique aux contraintes hautes fréquences. Elle vise à transposer les résonateurs LC en ligne micro-ruban. Deux approches ont été présentées : la première basée uniquement sur des lignes demie onde et la seconde sur des lignes quart d'onde. Dans les deux cas la méthode est similaire, trouver un modèle équivalant aux résonateurs série et parallèle pour opérer la transposition technologique. Finalement, nous avons pu monter par simulation que la bande de validité de la fonction passe bande est deux fois plus large pour la synthèse à base de lignes quart d'onde que pour celle basée sur des lignes demie onde.\\
+La dernière partie présente la conception d'une fonction d'électronique : l'amplification. Il s'agissait de travailler avec un transistor AT-41485 faible bruit pour amplifier le signal à 2 GHz. De la même manière qu'en électronique des basses ou moyennes fréquences, il a été nécessaire de polariser le transistor. Sa matrice S varie en fonction de la polarisation et de la fréquence ce qui complique la mise au point d'amplificateurs en hautes fréquences. En effet, dans un cas réel, une polarisation n'est jamais parfaite et un petit écart sur la tension $V_{CE}$ ou le courant $I_C$ peut changer brutalement la matrice $S$. Il a donc été nécessaire de déterminer les paramètres S avant la conception des quadripôles d'entrée et de sortie pour adapter.\\
 
-La conception d'un filtre passe bande a été présentée suivant différentes étapes. La première s'attache à vérifier et, si nécessaire, recentrer le gabarit. Cela permet de procéder à l'étape suivante, la transformation du gabarit en passe bas. Il est alors aisément possible de déterminer l'ordre du filtre et calculer les valeurs normalisées des composants. Viens ensuite l'étape de dénormalisation visant à remplacer chaque composant réactif en résonateur LC série ou parallèle. Le résultat de cette synthèse peut être simulé pour valider le bon fonctionnement. Dans notre cas, une dissymétrie lors du recentrage couplée à un ordre de filtre limite ont entraînés une légère sortie du gabarit. L'étape finale de transposition en technologie micro-ruban est spécifique aux contraintes hautes fréquences. Elle vise à transposer les résonateurs LC en ligne micro-ruban. Deux approches ont été présentées : la première basée uniquement sur des lignes demie onde et la seconde sur des lignes quart d'onde. Dans les deux cas la méthode est similaire, trouver un modèle équivalant aux résonateurs série et parallèle pour opérer la transposition technologique. Finalement, nous avons pu monter par simulation que la bande de validité de la fonction passe bande est deux fois plus large pour la synthèse à base de lignes quart d'onde que pour celle basée sur des lignes demie onde.\\
-
-La dernière partie s'inscrit dans la conception d'une fonction d'électronique qu'est l'amplification. Il s'agissait de travailler avec un transistor AT-41485 faible bruit pour amplifier le signal à 2 GHz. De la même manière qu'en électronique des basses ou moyennes fréquences il a été nécessaire de polariser le transistor. Chaque point de polarisation, et pour diverses fréquences, la matrice $S$ est différente, ce qui a permis de comprendre la difficulté de la mise au point d'amplificateur en hautes-fréquences. En effet, dans un cas réel, une polarisation n'est jamais parfaite et un petit écart sur la tension $V_{CE}$ ou pour le courant $I_C$ désiré peut changer brutalement la matrice $S$. Il a donc été nécessaire de déterminer les paramètres $s_{11}$, $s_{12}$, $s_{21}$ et $s_{22}$ avant la réalisation des quadripôles d'entrée et de sortie pour adapter.
-
+Ce TP traitant d’une thématique concrète a suscité notre intérêt. Les quatre étudiants, conscients des nombreuses connaissances acquises par ce travail, sont satisfaits de l'enseignement. Cela a même suscité des questionnements sur les choix de spécialités de cinquième année et peut-être des vocations. Nous souhaitons de nouveau remercier les enseignants qui ont su, par leur pédagogie, attiser notre curiosité.
 
 
 \newpage
-\cite{cours_MF} \cite{cours_HF} \cite{data_fr4} \cite{data_PTFE}
+
 \bibliography{bib_hf}{}
 \bibliographystyle{plain}
-\newpage
 
 \section*{Annexes}
-
 \subsection*{Plaque avec lignes de caractérisation}
 \includegraphics[scale=0.0525]{photo/ligne et filtre/plaque_caract_teflon.jpg}
 \includegraphics[scale=0.07]{photo/ligne et filtre/plaque_caract_epoxy.jpg}
