--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -1927,13 +1927,13 @@ Lorsque la fréquence de simulation est de 2 GHz, les résultats montrent que $S
 \newpage
 \section{Conclusion}
 Au cours de ce rapport il a été vu dans un premier temps une méthodologie de caractérisation d'une ligne micro-ruban sur divers diélectriques. La méthode consistait à la superposition entre les valeurs réelles expérimentales et celles obtenues à partir d'une modélisation. La réalisation d'une bonne caractérisation réside dans la complexité du modèle théorique, qui se doit être la plus réaliste possible. C'est ce qui a été mis en place à l'aide de la prise en compte de phénomènes physiques comme les discontinuités. Il est indispensable de réaliser cette étape de caractérisation avant toutes réalisations de fonctions électroniques car il faut avoir connaissance des paramètres du diélectrique pour que les simulations effectuées soient proches de ce qu'on obtiendrait lors de la réalisation en laboratoire.\\
+La conception d'un filtre passe-bas de Tchebychef en hautes fréquences a été présentée suivant différentes étapes. La première étape était de faire une synthèse avec des éléments localisés. La seconde, de remplacer chaque élément localisé par des éléments distribués : des lignes de transmission. Après simulation, nous avons montré que l'ajout d'un stub avec des paramètres bien précis permet d'augmenter la plage de fréquences où la bande atténuée est conforme au cahier des charges. Ensuite, nous avons observé que l'utilisation d'un substrat en teflon est plus adaptée aux hautes fréquences qu'un substrat epoxy. Pour finir, nous avons comparé les résultats des simulations avec des filtres déjà implémentés sur PCB. Bien que les allures des réponses en fréquences sont semblables, des différences existent liées principalement aux pertes du substrat non prise en compte dans notre simulation.\\
 Le filtre passe-bas elliptique a été conçu en essayant de respecter au mieux les exigences du cahier des charges. Une telle conception a également permis d'étudier un tout nouveau type de filtre qu'est le filtre elliptique, autrement appelé filtre de Cauer. La conception en éléments localisés a été réalisée avec les mêmes méthodes employées lors de la conception en moyennes fréquences. La seconde partie consistait à la transposition en technologie micro-ruban. Un tel passage s'appui sur un modèle physique basé sur des hypothèses. La réalisation impose de fixer des paramètres géométriques choisis en fonction des contraintes concepteurs (contraintes technologiques photolithographies). Les simulations ont montré que les hypothèses ne sont pas toujours respectées. Il s'agit là d'une leçon utile pour notre future carrière d'ingénieur. En effet, les projets imposent parfois de faire des hypothèses, l'enjeu est de savoir si elles sont bien applicables dans le contexte donné.\\
 La conception d'un filtre passe bande a été présentée suivant différentes étapes. La première s'attache à vérifier et, si nécessaire, recentrer le gabarit. La suivante opère une transformation du gabarit en passe bas. Cela rend plus aisé le calcul de l'ordre et des valeurs normalisées. Viens ensuite l'étape de dénormalisation visant à remplacer chaque composant réactif en résonateur LC série ou parallèle. Le résultat de cette synthèse peut être simulé pour valider le bon fonctionnement. Dans notre cas, une dissymétrie lors du recentrage couplée à un ordre de filtre limite ont entraînés une légère sortie du gabarit. L'étape finale de transposition en technologie micro-ruban est spécifique aux contraintes hautes fréquences. Elle vise à transposer les résonateurs LC en ligne micro-ruban. Deux approches ont été présentées : la première basée uniquement sur des lignes demie onde et la seconde sur des lignes quart d'onde. Dans les deux cas la méthode est similaire, trouver un modèle équivalant aux résonateurs série et parallèle pour opérer la transposition technologique. Finalement, nous avons pu monter par simulation que la bande de validité de la fonction passe bande est deux fois plus large pour la synthèse à base de lignes quart d'onde que pour celle basée sur des lignes demie onde.\\
 La dernière partie présente la conception d'une fonction d'électronique : l'amplification. Il s'agissait de travailler avec un transistor AT-41485 faible bruit pour amplifier le signal à 2 GHz. De la même manière qu'en électronique des basses ou moyennes fréquences, il a été nécessaire de polariser le transistor. Sa matrice S varie en fonction de la polarisation et de la fréquence ce qui complique la mise au point d'amplificateurs en hautes fréquences. En effet, dans un cas réel, une polarisation n'est jamais parfaite et un petit écart sur la tension $V_{CE}$ ou le courant $I_C$ peut changer brutalement la matrice $S$. Il a donc été nécessaire de déterminer les paramètres S avant la conception des quadripôles d'entrée et de sortie pour adapter.\\
 
 Ce TP traitant d’une thématique concrète a suscité notre intérêt. Les quatre étudiants, conscients des nombreuses connaissances acquises par ce travail, sont satisfaits de l'enseignement. Cela a même suscité des questionnements sur les choix de spécialités de cinquième année et peut-être des vocations. Nous souhaitons de nouveau remercier les enseignants qui ont su, par leur pédagogie, attiser notre curiosité.
 
-La conception d'un filtre passe-bas de Tchebychef en hautes fréquences a été présentée suivant différentes étapes. La première étape était de faire une synthèse avec des éléments localisés. La seconde, de remplacer chaque élément localisé par des éléments distribués : des lignes de transmission. Après simulation, nous avons montré que l'ajout d'un stub avec des paramètres bien précis permet d'augmenter la plage de fréquences où la bande atténuée est conforme au cahier des charges. Ensuite, nous avons observé que l'utilisation d'un substrat en teflon est plus adapté aux hautes fréquences qu'un substrat epoxy. Pour finir, nous avons comparé le résultat de nos simulations avec des filtres déjà implémenté sur PCB. Bien que les allures des réponses en fréquences étaient semblables, des différences existaient liées principalement aux pertes du substrat non prise en compte dans notre simulation.
 
 
 
